<resources>
    <string name="app_name">EventScan</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="attendee">Attendee</string>
    <string name="organizer">Organizer</string>
    <string name="administrator">Administrator</string>
    <string name="profile">Profile</string>
    <string name="sendNoti">Notify</string>
    <string name="addEvent">Add Event</string>
    <string name="viewEvents">View Events</string>
    <string name="allUsersString">All Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_sign_up_interest_button_text">I Promise to go!</string>
    <string name="event_sign_up_success">Success!</string>
    <string name="event_sign_up_failure_exit">Exit</string>
    <string name="event_sign_up_failure_description">Check-in Failed\nPlease relaunch the app and try again</string>
</resources>