<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Activities.OrganizerEventsView">

    <Button
        android:id="@+id/buttonAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="750dp"
        android:backgroundTint="#414E6E"
        android:text="@string/addEvent"
        android:textColor="#D3E2F2" />

    <Button
        android:id="@+id/buttonSendEventNoti"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#414E6E"
        android:text="@string/sendNoti"
        android:textColor="#D3E2F2" />

    <Button
        android:id="@+id/buttonViewEvents"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#414E6E"
        android:text="@string/viewEvents"
        android:textColor="#D3E2F2" />

    <Button
        android:id="@+id/buttonOrganizerProfile"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#414E6E"
        android:text="@string/profile"
        android:textColor="#D3E2F2" />

</RelativeLayout>
